Change Header position to "absolute" since "fixed" broke z-index positioning

--- a/client/src/modules/deckMap/cargoDetails/CargoDetails.scss
+++ b/client/src/modules/deckMap/cargoDetails/CargoDetails.scss
@@ -9,7 +9,7 @@
   font-size: $standardFont;
   height: min-content;
   // width: min-content;
-  z-index: $cargoDetailsOverlayZIndex + 1;
+  // z-index: $cargoDetailsOverlayZIndex + 1;
   background-color: white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
