--- a/client/src/modules/header/Header.scss
+++ b/client/src/modules/header/Header.scss
@@ -6,7 +6,7 @@
   border-bottom: 1px solid $gray80;
   justify-content: space-between;
   z-index: 10;
-  position: fixed;
+  position: absolute;
   width: 100%;
   background-color: white;
 }
